[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dynconfig"
version = "0.1.0"
description = "Dynamic configuration management for Django with admin UI, type casting, and optional encryption."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marcelo Santino", email = "marcelo@santino.dev" },
]
keywords = ["django", "configuration", "settings", "dynamic", "admin", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
encryption = ["cryptography>=41.0"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "tox>=4.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/marcelosantino/django-dynconfig"
Documentation = "https://github.com/marcelosantino/django-dynconfig#readme"
Repository = "https://github.com/marcelosantino/django-dynconfig"
Changelog = "https://github.com/marcelosantino/django-dynconfig/blob/main/CHANGELOG.md"
Issues = "https://github.com/marcelosantino/django-dynconfig/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = ["src", "."]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["dynconfig"]

[tool.coverage.report]
show_missing = true
skip_empty = true
